--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Фотоклуб</title>
-    <link href="style.css" rel="stylesheet"
+    <link href="style.css" rel="stylesheet">
 </head>
 <body class="page">
     <header class="header">
@@ -36,7 +36,7 @@
      </div>
      <main class="fotocontent">
        <div class="card">
-         <img src="фото1.png" width="200" alt="девушка идет по траве">
+         <img src="img/фото1.png" width="200" alt="девушка идет по траве">
          <div class="card-content">
            <div class="upper">
              <span class="sign">Lorem Ipsum is simply</span>
@@ -56,7 +56,7 @@
          </div>
        </div>
        <div class="card">
-        <img src="фото2.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото2.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото4.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото4.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -116,7 +116,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото5.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото5.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото6.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото6.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -156,7 +156,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото7.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото7.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -176,7 +176,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото8.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото8.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -196,7 +196,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото9.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото9.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -216,7 +216,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото10.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото10.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -236,7 +236,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото11.png" width="200" alt="девушка идет по траве">
+        <img src="img/фото11.png" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
@@ -256,7 +256,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="фото12.png" class="photo" width="200" alt="девушка идет по траве">
+        <img src="img/фото12.png" class="photo" width="200" alt="девушка идет по траве">
         <div class="card-content">
           <div class="upper">
             <span class="sign">Lorem Ipsum is simply</span>
